src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Board_Level__c</fullName>
        <description>Distinguish between Directors and Trustees</description>
        <label>Board Level</label>
        <picklist>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emeritus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cabinet_Level__c</fullName>
        <label>Cabinet Level</label>
        <picklist>
            <picklistValues>
                <fullName>State</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cabinet_Name__c</fullName>
        <description>Name of the State or Regional Cabinet</description>
        <inlineHelpText>The name of the State or Regional Cabinet</inlineHelpText>
        <label>Cabinet Name</label>
        <picklist>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio River Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <label>Committee</label>
        <picklist>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Strategic Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer School Board of Visitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statesman of the Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recruitment_Phase__c</fullName>
        <label>Recruitment Phase</label>
        <picklist>
            <picklistValues>
                <fullName>No Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided - follow up needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested - Follow up needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intends to Apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - different program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - other plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - finances</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>How did we first get this JSA member to express interest in applying for summer school (for JSA Scholar campaign only)?</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing/General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention - FS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention - Con</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convention - SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSA Leader - CP/Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T/A Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T/A Congress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T/A Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T/A Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Expiration__c</fullName>
        <label>Term Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title_Position__c</fullName>
        <label>Title/Position</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Board_Members</fullName>
        <active>true</active>
        <label>Board Members</label>
    </recordTypes>
    <recordTypes>
        <fullName>JSA_Cabinet</fullName>
        <active>true</active>
        <description>JSA Elected Officials and Appointed Cabinet Members</description>
        <label>JSA Cabinet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Campaign</fullName>
        <active>true</active>
        <description>Use this record type for campaigns that drive attendance at events/programs, such as summer school.</description>
        <label>Standard Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Summer_Recruitment</fullName>
        <active>true</active>
        <description>Recruitment for Summer Program Students</description>
        <label>Summer Recruitment</label>
    </recordTypes>
</CustomObject>